--- a/docs/api/HackRFDotnet.NativeApi.Structs.System.yml
+++ b/docs/api/HackRFDotnet.NativeApi.Structs.System.yml
@@ -11,6 +11,7 @@ body:
   - type:
       text: HackRFM0State
       url: HackRFDotnet.NativeApi.Structs.System.HackRFM0State.html
+    description: State of the SGPIO loop running on the M0 core.
   - type:
       text: ReadPartidSerialNo
       url: HackRFDotnet.NativeApi.Structs.System.ReadPartidSerialNo.html
