--- a/HackRFDotnet/HackRFDotnet.csproj
+++ b/HackRFDotnet/HackRFDotnet.csproj
@@ -35,6 +35,7 @@
 
     <ItemGroup>
       <Folder Include="Api\Streams\SignalProcessing\CodecConverters\" />
+      <Folder Include="Api\Streams\SignalProcessing\FormatConverters\Encoders\" />
     </ItemGroup>
 
 </Project>
