--- a/HackRFDotnet/HackRFDotnet.csproj
+++ b/HackRFDotnet/HackRFDotnet.csproj
@@ -14,6 +14,8 @@
         <PackageReference Include="MathNet.Filtering" Version="0.7.0" />
         <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
         <PackageReference Include="MathNet.Numerics.MKL.Win-x64" Version="3.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.9" />
         <PackageReference Include="NAudio" Version="2.2.1" />
     </ItemGroup>
 
