--- a/HackRFDotnet/HackRFDotnet.csproj
+++ b/HackRFDotnet/HackRFDotnet.csproj
@@ -36,8 +36,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Api\Streams\SignalProcessing\CodecConverters\" />
-      <Folder Include="Api\Streams\SignalProcessing\FormatConverters\Encoders\" />
+      <Folder Include="Api\SignalProcessing\CodecConverters\" />
+      <Folder Include="Api\SignalProcessing\FormatConverters\Encoders\" />
     </ItemGroup>
 
 </Project>
